--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://gjj.github.io/opencerts-privacy-filter",
   "private": true,
   "dependencies": {
+    "@govtechsg/open-certificate": "^2.0.51",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
