--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "homepage": "https://gjj.github.io/opencerts-privacy-filter",
   "private": true,
   "dependencies": {
-    "@govtechsg/open-certificate": "^2.0.51",
+    "@govtechsg/open-attestation": "^3.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.4.1",
@@ -16,7 +17,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
-    "react-json-tree": "^0.11.2",
+    "react-json-view": "^1.19.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
     "@types/react": "^16.9.34",
     "gh-pages": "^2.2.0"
   }
