--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -27,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "postinstall": "cd node_modules/react-json-view && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.1",
     "@types/react": "^16.9.34",
     "gh-pages": "^2.2.0"
   }
