--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "opencerts-privacy-filter",
+  "name": "oa-privacy-filter",
   "version": "0.1.0",
-  "homepage": "https://gjj.github.io/opencerts-privacy-filter",
+  "homepage": "https://oa-privacy-filter.netlify.app",
   "private": true,
   "dependencies": {
     "@govtechsg/open-attestation": "^3.7.0",
@@ -12,13 +12,16 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.0",
+    "ajv": "^6.0.0",
     "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
-    "react-json-view": "^1.19.1",
+    "react-json-view": "^1.19.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -27,9 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "postinstall": "cd node_modules/react-json-view && npm install && npm run build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
