--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.0",
+    "@types/validator": "^13.0.0",
     "ajv": "^6.0.0",
     "file-saver": "^2.0.2",
     "jquery": "^1.9.1",
@@ -23,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-json-view": "^1.19.0",
+    "react-lines-ellipsis": "^0.14.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.9.3"
   },
