--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
       ],
       "@typescript-eslint/explicit-member-accessibility": 0,
       "@typescript-eslint/no-use-before-define": 0,
+      "@typescript-eslint/no-explicit-any": "off",
       "array-callback-return": "warn",
       "import/no-default-export": "error",
       "import/no-unresolved": 2,
